--- a/app.json
+++ b/app.json
@@ -10,8 +10,8 @@
   "category": [
     "lights"
   ],
-  "version": "1.1.3",
-  "compatibility": ">=1.5.4",
+  "version": "1.1.4",
+  "compatibility": ">=1.5.13",
   "sdk": 2,
   "author": {
     "name": "Kasteleman",
@@ -486,9 +486,9 @@
       },
       "zigbee": {
         "manufacturerName": "innr",
-        "productId": ["RS 125", "RS 122"],
-        "deviceId": 256,
-        "profileId": 49246,
+        "productId": ["RS 125", "RS 122", "RS 225"],
+        "deviceId": [256, 257],
+        "profileId": [49246, 260],
         "learnmode": {
           "image": "/drivers/dimmable_gu10/assets/icon.svg",
           "instruction": {
@@ -541,9 +541,9 @@
       },
       "zigbee": {
         "manufacturerName": "innr",
-        "productId": ["RS 128 T"],
-        "deviceId": 544,
-        "profileId": 49246,
+        "productId": ["RS 128 T", "RS 228 T"],
+        "deviceId": [544, 545],
+        "profileId": [49246, 260],
         "learnmode": {
           "image": "/drivers/tunable_gu10/assets/icon.svg",
           "instruction": {
