--- a/app.json
+++ b/app.json
@@ -10,7 +10,7 @@
   "category": [
     "lights"
   ],
-  "version": "1.1.6",
+  "version": "1.1.7",
   "compatibility": ">=1.5.13",
   "sdk": 2,
   "author": {
@@ -596,11 +596,7 @@
       },
       "zigbee": {
         "manufacturerName": "innr",
-        "productId": [
-          "BY 178 T",
-          "RB 178 T",
-          "RB 278 T"
-        ],
+        "productId": ["BY 178 T", "RB 178 T", "RB 278 T"],
         "deviceId": [544, 268],
         "profileId": [49246, 260],
         "learnmode": {
