--- a/app.json
+++ b/app.json
@@ -250,80 +250,6 @@
     },
     {
       "name": {
-        "en": "Vintage filament Big Bulb",
-        "nl": "Vintage filament Bolle Lamp"
-      },
-      "class": "light",
-      "capabilities": [
-        "onoff",
-        "dim"
-      ],
-      "capabilitiesOptions": {
-        "dim": {
-          "opts": {
-            "duration": true
-          }
-        },
-        "onoff": {
-          "setOnDim": false
-        }
-      },
-      "zigbee": {
-        "manufacturerName": "innr",
-        "productId": [
-          "RF 261",
-          "BF 261"
-        ],
-        "deviceId": [
-          257
-        ],
-        "profileId": [
-          260
-        ],
-        "learnmode": {
-          "image": "/drivers/big_filament_bulb_vintage/assets/icon.svg",
-          "instruction": {
-            "en": "Toggle the bulb to start pairing.\n\nIf pairing does not automatically start within 20 seconds, try resetting the bulb by toggling it 6 times very quickly. It will flash twice to indicate it has been reset.",
-            "nl": "Zet de lamp uit en weer aan.\n\nWordt de lamp niet automatisch toegevoegd binnen 20 seconden, probeer hem dan te resetten door snel 6 keer de lamp aan en uit te zetten. De lamp zal twee keer knipperen om aan te geven dat hij is gereset."
-          }
-        }
-      },
-      "images": {
-        "large": "/drivers/big_filament_bulb_vintage/assets/images/large.png",
-        "small": "/drivers/big_filament_bulb_vintage/assets/images/small.png"
-      },
-      "settings": [
-        {
-          "id": "transition_time",
-          "type": "number",
-          "label": {
-            "nl": "Transitie tijd in seconden",
-            "en": "Transition time in seconds"
-          },
-          "value": 1,
-          "attr": {
-            "min": 0,
-            "max": 20
-          }
-        },
-        {
-          "id": "On_Off_TransitionTime",
-          "type": "number",
-          "label": {
-            "nl": "Aan/Uit Transitie tijd in seconden",
-            "en": "On/Off Transition time in seconds"
-          },
-          "value": 1,
-          "attr": {
-            "min": 0,
-            "max": 20
-          }
-        }
-      ],
-      "id": "big_filament_bulb_vintage"
-    },
-    {
-      "name": {
         "en": "Dimmable Bulb",
         "nl": "Dimbare Lamp"
       },
@@ -614,6 +540,80 @@
     },
     {
       "name": {
+        "en": "Vintage filament Edison Bulb",
+        "nl": "Vintage filament Edison Lamp"
+      },
+      "class": "light",
+      "capabilities": [
+        "onoff",
+        "dim"
+      ],
+      "capabilitiesOptions": {
+        "dim": {
+          "opts": {
+            "duration": true
+          }
+        },
+        "onoff": {
+          "setOnDim": false
+        }
+      },
+      "zigbee": {
+        "manufacturerName": "innr",
+        "productId": [
+          "RF 264",
+          "BF 264"
+        ],
+        "deviceId": [
+          257
+        ],
+        "profileId": [
+          260
+        ],
+        "learnmode": {
+          "image": "/drivers/edison_filament_bulb_vintage/assets/icon.svg",
+          "instruction": {
+            "en": "Toggle the bulb to start pairing.\n\nIf pairing does not automatically start within 20 seconds, try resetting the bulb by toggling it 6 times very quickly. It will flash twice to indicate it has been reset.",
+            "nl": "Zet de lamp uit en weer aan.\n\nWordt de lamp niet automatisch toegevoegd binnen 20 seconden, probeer hem dan te resetten door snel 6 keer de lamp aan en uit te zetten. De lamp zal twee keer knipperen om aan te geven dat hij is gereset."
+          }
+        }
+      },
+      "images": {
+        "large": "/drivers/edison_filament_bulb_vintage/assets/images/large.png",
+        "small": "/drivers/edison_filament_bulb_vintage/assets/images/small.png"
+      },
+      "settings": [
+        {
+          "id": "transition_time",
+          "type": "number",
+          "label": {
+            "nl": "Transitie tijd in seconden",
+            "en": "Transition time in seconds"
+          },
+          "value": 1,
+          "attr": {
+            "min": 0,
+            "max": 20
+          }
+        },
+        {
+          "id": "On_Off_TransitionTime",
+          "type": "number",
+          "label": {
+            "nl": "Aan/Uit Transitie tijd in seconden",
+            "en": "On/Off Transition time in seconds"
+          },
+          "value": 1,
+          "attr": {
+            "min": 0,
+            "max": 20
+          }
+        }
+      ],
+      "id": "edison_filament_bulb_vintage"
+    },
+    {
+      "name": {
         "en": "Vintage filament Bulb",
         "nl": "Vintage filament Lamp"
       },
@@ -762,6 +762,80 @@
     },
     {
       "name": {
+        "en": "Vintage filament Globe Bulb",
+        "nl": "Vintage filament Globe Lamp"
+      },
+      "class": "light",
+      "capabilities": [
+        "onoff",
+        "dim"
+      ],
+      "capabilitiesOptions": {
+        "dim": {
+          "opts": {
+            "duration": true
+          }
+        },
+        "onoff": {
+          "setOnDim": false
+        }
+      },
+      "zigbee": {
+        "manufacturerName": "innr",
+        "productId": [
+          "RF 261",
+          "BF 261"
+        ],
+        "deviceId": [
+          257
+        ],
+        "profileId": [
+          260
+        ],
+        "learnmode": {
+          "image": "/drivers/globe_filament_bulb_vintage/assets/icon.svg",
+          "instruction": {
+            "en": "Toggle the bulb to start pairing.\n\nIf pairing does not automatically start within 20 seconds, try resetting the bulb by toggling it 6 times very quickly. It will flash twice to indicate it has been reset.",
+            "nl": "Zet de lamp uit en weer aan.\n\nWordt de lamp niet automatisch toegevoegd binnen 20 seconden, probeer hem dan te resetten door snel 6 keer de lamp aan en uit te zetten. De lamp zal twee keer knipperen om aan te geven dat hij is gereset."
+          }
+        }
+      },
+      "images": {
+        "large": "/drivers/globe_filament_bulb_vintage/assets/images/large.png",
+        "small": "/drivers/globe_filament_bulb_vintage/assets/images/small.png"
+      },
+      "settings": [
+        {
+          "id": "transition_time",
+          "type": "number",
+          "label": {
+            "nl": "Transitie tijd in seconden",
+            "en": "Transition time in seconds"
+          },
+          "value": 1,
+          "attr": {
+            "min": 0,
+            "max": 20
+          }
+        },
+        {
+          "id": "On_Off_TransitionTime",
+          "type": "number",
+          "label": {
+            "nl": "Aan/Uit Transitie tijd in seconden",
+            "en": "On/Off Transition time in seconds"
+          },
+          "value": 1,
+          "attr": {
+            "min": 0,
+            "max": 20
+          }
+        }
+      ],
+      "id": "globe_filament_bulb_vintage"
+    },
+    {
+      "name": {
         "en": "LED Strip",
         "nl": "LED Strip"
       },
@@ -807,80 +881,6 @@
         }
       ],
       "id": "led_strip"
-    },
-    {
-      "name": {
-        "en": "Vintage filament Long Bulb",
-        "nl": "Vintage filament Lange Lamp"
-      },
-      "class": "light",
-      "capabilities": [
-        "onoff",
-        "dim"
-      ],
-      "capabilitiesOptions": {
-        "dim": {
-          "opts": {
-            "duration": true
-          }
-        },
-        "onoff": {
-          "setOnDim": false
-        }
-      },
-      "zigbee": {
-        "manufacturerName": "innr",
-        "productId": [
-          "RF 264",
-          "BF 264"
-        ],
-        "deviceId": [
-          257
-        ],
-        "profileId": [
-          260
-        ],
-        "learnmode": {
-          "image": "/drivers/long_filament_bulb_vintage/assets/icon.svg",
-          "instruction": {
-            "en": "Toggle the bulb to start pairing.\n\nIf pairing does not automatically start within 20 seconds, try resetting the bulb by toggling it 6 times very quickly. It will flash twice to indicate it has been reset.",
-            "nl": "Zet de lamp uit en weer aan.\n\nWordt de lamp niet automatisch toegevoegd binnen 20 seconden, probeer hem dan te resetten door snel 6 keer de lamp aan en uit te zetten. De lamp zal twee keer knipperen om aan te geven dat hij is gereset."
-          }
-        }
-      },
-      "images": {
-        "large": "/drivers/long_filament_bulb_vintage/assets/images/large.png",
-        "small": "/drivers/long_filament_bulb_vintage/assets/images/small.png"
-      },
-      "settings": [
-        {
-          "id": "transition_time",
-          "type": "number",
-          "label": {
-            "nl": "Transitie tijd in seconden",
-            "en": "Transition time in seconds"
-          },
-          "value": 1,
-          "attr": {
-            "min": 0,
-            "max": 20
-          }
-        },
-        {
-          "id": "On_Off_TransitionTime",
-          "type": "number",
-          "label": {
-            "nl": "Aan/Uit Transitie tijd in seconden",
-            "en": "On/Off Transition time in seconds"
-          },
-          "value": 1,
-          "attr": {
-            "min": 0,
-            "max": 20
-          }
-        }
-      ],
-      "id": "long_filament_bulb_vintage"
     },
     {
       "name": {
