--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This app allows you to connect your INNR Devices to Homey",
   "main": "app.js",
   "dependencies": {
-    "homey-meshdriver": "1.3.22"
+    "homey-meshdriver": "^1.3.23"
   },
   "devDependencies": {},
   "scripts": {
