--- a/app.json
+++ b/app.json
@@ -1,16 +1,16 @@
 {
   "id": "com.innr",
   "name": {
-    "en": "INNR Lighting B.V."
+    "en": "INNR Lighting Devices"
   },
   "description": {
-    "en": "INNR Lighting B.V.",
-    "nl": "INNR Lighting B.V."
+    "en": "INNR Lighting Devices",
+    "nl": "INNR Lighting Apparaten"
   },
   "category": [
     "lights"
   ],
-  "version": "1.1.16",
+  "version": "1.1.17",
   "compatibility": ">=1.5.13",
   "sdk": 2,
   "author": {
